search bar heading alignment fix for IE

--- a/src/SFA.DAS.EAS.Web/src/sass/_custom.scss
+++ b/src/SFA.DAS.EAS.Web/src/sass/_custom.scss
@@ -637,6 +637,7 @@ width: 100%;
 
 #search-form{
 		margin:7px 0 15px 0;
+        .heading-medium{margin-top:0;}
         .search-text{
            @include media(tablet) {width:262px;height:39px;}
         height:38px;
